feat: move series analysis to asynchronous worker